--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+  <!-- Hero section start here -->
   <section class="hero-section">
     <div class="container">
       <div class="hero-content">
@@ -19,6 +21,71 @@
       </div>
     </div>
   </section>
+  <!-- Hero section end here -->
+
+  <!-- Recent business section start here -->
+
+  <section class="recent-business-section">
+    <div class="container">
+      <div class="title-section">
+        <h2>Recent Businesses Sold With Rightbiz</h2>
+      </div>
+      <div class="carousel-container">
+        <div class="carousel-body">
+          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-desc">
+            <h4>Off license for Sale in London</h4>
+            <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path d="M10 10.042q.708 0 1.208-.5t.5-1.209q0-.708-.5-1.208T10 6.625q-.708 0-1.208.5t-.5 1.208q0 .709.5
+                  1.209.5.5 1.208.5ZM10 16q2.521-2.312 3.719-4.177 1.198-1.865 1.198-3.323
+                  0-2.271-1.417-3.677-1.417-1.406-3.5-1.406T6.5 4.823Q5.083 6.229 5.083 8.5q0 1.458 1.198 3.323T10 16Zm0
+                  2.333q-3.354-2.895-5.01-5.312Q3.333 10.604 3.333 8.5q0-3.146 2-4.99 2-1.843 4.667-1.843t4.667 1.843q2
+                  1.844 2 4.99 0 2.104-1.657 4.521-1.656 2.417-5.01 5.312ZM10 8.5Z" fill="#15be53" />
+              </svg> Walthamstow, London</p>
+          </div>
+        </div>
+        <div class="carousel-body">
+          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-desc">
+            <h4>Off license for Sale in London</h4>
+            <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path
+                  d="M10 10.042q.708 0 1.208-.5t.5-1.209q0-.708-.5-1.208T10 6.625q-.708 0-1.208.5t-.5 1.208q0 .709.5 1.209.5.5 1.208.5ZM10 16q2.521-2.312 3.719-4.177 1.198-1.865 1.198-3.323 0-2.271-1.417-3.677-1.417-1.406-3.5-1.406T6.5 4.823Q5.083 6.229 5.083 8.5q0 1.458 1.198 3.323T10 16Zm0 2.333q-3.354-2.895-5.01-5.312Q3.333 10.604 3.333 8.5q0-3.146 2-4.99 2-1.843 4.667-1.843t4.667 1.843q2 1.844 2 4.99 0 2.104-1.657 4.521-1.656 2.417-5.01 5.312ZM10 8.5Z"
+                  fill="#15be53" />
+              </svg> Walthamstow, London</p>
+          </div>
+        </div>
+        <div class="carousel-body">
+          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-desc">
+            <h4>Off license for Sale in London</h4>
+            <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path d="M10 10.042q.708 0 1.208-.5t.5-1.209q0-.708-.5-1.208T10 6.625q-.708 0-1.208.5t-.5 1.208q0 .709.5
+                  1.209.5.5 1.208.5ZM10 16q2.521-2.312 3.719-4.177 1.198-1.865 1.198-3.323
+                  0-2.271-1.417-3.677-1.417-1.406-3.5-1.406T6.5 4.823Q5.083 6.229 5.083 8.5q0 1.458 1.198 3.323T10 16Zm0
+                  2.333q-3.354-2.895-5.01-5.312Q3.333 10.604 3.333 8.5q0-3.146 2-4.99 2-1.843 4.667-1.843t4.667 1.843q2
+                  1.844 2 4.99 0 2.104-1.657 4.521-1.656 2.417-5.01 5.312ZM10 8.5Z" fill="#15be53" />
+              </svg> Walthamstow, London</p>
+          </div>
+        </div>
+        <div class="carousel-body">
+          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-desc">
+            <h4>Off license for Sale in London</h4>
+            <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path d="M10 10.042q.708 0 1.208-.5t.5-1.209q0-.708-.5-1.208T10 6.625q-.708 0-1.208.5t-.5 1.208q0 .709.5
+                  1.209.5.5 1.208.5ZM10 16q2.521-2.312 3.719-4.177 1.198-1.865 1.198-3.323
+                  0-2.271-1.417-3.677-1.417-1.406-3.5-1.406T6.5 4.823Q5.083 6.229 5.083 8.5q0 1.458 1.198 3.323T10 16Zm0
+                  2.333q-3.354-2.895-5.01-5.312Q3.333 10.604 3.333 8.5q0-3.146 2-4.99 2-1.843 4.667-1.843t4.667 1.843q2
+                  1.844 2 4.99 0 2.104-1.657 4.521-1.656 2.417-5.01 5.312ZM10 8.5Z" fill="#15be53" />
+              </svg> Walthamstow, London</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Recent business section end here -->
 
   <!-- advert section start here -->
   <section class="advert-main-section">
@@ -36,25 +103,47 @@
 
           <ul class="featured-list">
             <li>
-              <p>A business description with no limits</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg> A
+                business
+                description with no limits</p>
             </li>
             <li>
-              <p>The chance to upload up to 15 eye catching images</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+                The chance to
+                upload up to 15 eye catching images</p>
             </li>
             <li>
-              <p>An easy way to view all enquiries and connect with buyers</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+                An easy way to
+                view all enquiries and connect with buyers</p>
             </li>
             <li>
-              <p>Unlimited advert revisions</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+                Unlimited advert
+                revisions</p>
             </li>
             <li>
-              <p>Expert selling advice & help from our selling team</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+                Expert selling
+                advice & help from our selling team</p>
             </li>
             <li>
-              <p>Boosted promotion with details about your business instantly emailed to thousands of buyers</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+                Boosted
+                promotion
+                with details about your business instantly emailed to thousands of buyers</p>
             </li>
             <li>
-              <p>Feature on UK's largest business for sale marketplace</p>
+              <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                  <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+                Feature on UK's
+                largest business for sale marketplace</p>
             </li>
           </ul>
         </div>
@@ -171,13 +260,23 @@
 
         <ul class="selling-business-benefit">
           <li>
-            <p>Expert Selling Support from Rightbiz's Selling Team</p>
+            <p> <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+              Expert Selling
+              Support from Rightbiz's Selling Team</p>
           </li>
           <li>
-            <p>Trusted and Used by Over 200+ of the UK’s Largest Business Agents</p>
+            <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg>
+              Trusted and Used
+              by
+              Over 200+ of the UK’s Largest Business Agents</p>
           </li>
           <li>
-            <p>No commission & No Hidden Fees</p>
+            <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+                <path fill="#225fac" d="m8.229 14.062-3.521-3.541L5.75 9.479l2.479 2.459 6.021-6L15.292 7Z" /></svg> No
+              commission & No
+              Hidden Fees</p>
           </li>
         </ul>
 
