--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
       </div>
       <div class="carousel-container">
         <div class="carousel-body">
-          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-img">
+            <img src="./Images/Rectangle 109.png" alt="">
+            <div class="status">
+              <p>SOLD</p>
+            </div>
+          </div>
           <div class="carousel-desc">
             <h4>Off license for Sale in London</h4>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
@@ -45,7 +50,12 @@
           </div>
         </div>
         <div class="carousel-body">
-          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-img">
+            <img src="./Images/Rectangle 109.png" alt="">
+            <div class="status">
+              <p>SOLD</p>
+            </div>
+          </div>
           <div class="carousel-desc">
             <h4>Off license for Sale in London</h4>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
@@ -56,7 +66,12 @@
           </div>
         </div>
         <div class="carousel-body">
-          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-img">
+            <img src="./Images/Rectangle 109.png" alt="">
+            <div class="status">
+              <p>SOLD</p>
+            </div>
+          </div>
           <div class="carousel-desc">
             <h4>Off license for Sale in London</h4>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
@@ -69,7 +84,12 @@
           </div>
         </div>
         <div class="carousel-body">
-          <img src="./Images/Rectangle 109.png" alt="">
+          <div class="carousel-img">
+            <img src="./Images/Rectangle 109.png" alt="">
+            <div class="status">
+              <p>SOLD</p>
+            </div>
+          </div>
           <div class="carousel-desc">
             <h4>Off license for Sale in London</h4>
             <p><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
