added rating star

--- a/index.html
+++ b/index.html
@@ -229,6 +229,18 @@
             <p>Company Designation</p>
             <p>“Rightbiz got me some much-needed exposure for the sale of my catering business. The process is simple to
               manage, and communications with potential buyers via email is made easy too.”</p>
+            <div class="rating-sec">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+            </div>
           </div>
         </div>
         <div class="seller-card-body">
@@ -238,6 +250,18 @@
             <p>Company Designation</p>
             <p>“Rightbiz got me some much-needed exposure for the sale of my catering business. The process is simple to
               manage, and communications with potential buyers via email is made easy too.”</p>
+            <div class="rating-sec">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+            </div>
           </div>
         </div>
         <div class="seller-card-body">
@@ -247,6 +271,18 @@
             <p>Company Designation</p>
             <p>“Rightbiz got me some much-needed exposure for the sale of my catering business. The process is simple to
               manage, and communications with potential buyers via email is made easy too.”</p>
+            <div class="rating-sec">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                <path d="m5.825 22 2.325-7.6L2 10h7.6L12 2l2.4 8H22l-6.15 4.4 2.325 7.6L12 17.3Z" /></svg>
+            </div>
           </div>
         </div>
       </div>
