--- a/index.html
+++ b/index.html
@@ -338,7 +338,8 @@
 
         <div>
           <p>Ads from £4Start your 14-day free trial. Pay nothing until satisfied.9/month.</p>
-          <button class="btn btn-green" style="margin: auto;">Create my advert</button>
+          <button class="btn btn-green" style="margin: auto; margin-top: 1rem; margin-bottom: 1rem">Create my
+            advert</button>
           <p class="price-list">Ads from £49/month.</p>
         </div>
 
