--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="container">
       <h2>Selling is fast, easy and friendly</h2>
       <div class="business-process-container">
-        <div>
+        <div class="business-process-body">
           <div class="icon-box">
             <img src="./Images/icons/letter.png" alt="">
           </div>
@@ -186,21 +186,21 @@
           <p>Takes less than 10 minutes.
           </p>
         </div>
-        <div>
+        <div class="business-process-body">
           <div class="icon-box">
             <img src="./Images//icons/enquiries.png" alt="">
           </div>
           <h3>Get Enquiries</h3>
           <p>Reply to interested buyers to begin viewings.</p>
         </div>
-        <div>
+        <div class="business-process-body">
           <div class="icon-box">
             <img src="./Images/icons/hand.png" alt="">
           </div>
           <h3>Negotiate</h3>
           <p>Reply to interesteNegotiate the best offer with the interested buyers</p>
         </div>
-        <div>
+        <div class="business-process-body">
           <div class="icon-box">
             <img src="./Images/icons/box.png" alt="">
           </div>
@@ -218,7 +218,7 @@
   <section class="success-seller-section">
     <div class="container">
       <div class="title-section" style="padding-bottom: 4rem">
-        <h2>Join thousands of successful sellers</h2>
+        <h2 style="margin-bottom: 1rem;">Join thousands of successful sellers</h2>
         <p>We help business owners like you save when selling their business every day.</p>
       </div>
       <div class="seller-card-container">
