--- a/brokers.html
+++ b/brokers.html
@@ -42,7 +42,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="brokers-business-section">
     <div class="container">
       <div class="heading-title">
         <h2>Brokers make selling your business simpler than ever</h2>
